--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!-- Fav Icon -->
     <link rel="icon" type="image/png" href="images/logo/image-logo.png">
-    <title>Maltahost</title>
+    <title>Amar Solution</title>
 
     <!-- Inject:css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
