--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AkaarIT">
-    <meta name="description" content="High Speed Cheapest Best Hosting & Domain Company in Bangladesh.">
+    <meta name="description" content="Amar Solution is one of the leading software companies. The only reliable software for conducting all types of business which is spread to thousands of traders across the country.">
 	<meta name="keywords" content="Bangladesh, Domain, Hosting, Domain and Hosting, Cheapest Hosting, Cheapest Domain, Cheap Domain, Cheap Hosting, Domain Hosting, Domain hosting Bangladesh, Cheap Domain Bnagladesh, Cheap Hosting Bangladesh, Domain & Hosting, Domain & Hosting in Bangladesh, SSD Space, SSD Storage, High Speed hosting, High speed hosting in Bagladesh.">
     
     <!-- Fav Icon -->
@@ -34,7 +34,7 @@
     <!-- Header -->
 
     <main class="mah-main-section">
-
+        
     </main>
 
     <!-- Footer -->
