--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
 
         <!-- Service -->
-        <div class="ams-service sec-spacer-top">
+        <div class="ams-service sec-spacer">
             <div class="container">
                 <div class="sec-heading text-center mb-5">
                     <h2 class="aos-animate" data-aos="fade-up" data-aos-duration="500">Our <span class="color-text">POS</span> Software</h2>
@@ -240,6 +240,188 @@
                     </div>
                     <div class="text-center">
                         <a href="#" class="ams-btn primary-btn mt-40">More About  Feature</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Testimonial -->
+        <div class="ams-testimonial">
+            <div class="sec-heading text-center mb-5">
+                <h6 class="color-text aos-animate" data-aos="fade-up" data-aos-duration="500">Testimonial</h6>
+                <h2 class="aos-animate" data-aos="fade-up" data-aos-duration="500">What Our Happy<br/> <span class="color-text">Clients</span> Say</h2>
+            </div>
+            <div class="container-fluid container-right">
+                <div class="client-reviews owl-carousel position-static">
+                    <div class="single-review">
+                        <div class="review-content">
+                            <span class="quote"><i class="fa-solid fa-quote-left"></i></span>
+                            <div class="review-ratings">
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                            </div>
+                            <p class="review-msg">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and.</p>
+                        </div>
+                        <div class="client">
+                            <div class="client-img">
+                                <img src="./images/shapes/masud.jpg" alt="Masud">
+                            </div>
+                            <div class="client-desig">
+                                <h6>Masud Rana</h6>
+                                <p>CEO WebWorld</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-review">
+                        <div class="review-content">
+                            <span class="quote"><i class="fa-solid fa-quote-left"></i></span>
+                            <div class="review-ratings">
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                            </div>
+                            <p class="review-msg">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and.</p>
+                        </div>
+                        <div class="client">
+                            <div class="client-img">
+                                <img src="./images/shapes/masud.jpg" alt="Masud">
+                            </div>
+                            <div class="client-desig">
+                                <h6>Masud Rana</h6>
+                                <p>CEO WebWorld</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-review">
+                        <div class="review-content">
+                            <span class="quote"><i class="fa-solid fa-quote-left"></i></span>
+                            <div class="review-ratings">
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                            </div>
+                            <p class="review-msg">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and.</p>
+                        </div>
+                        <div class="client">
+                            <div class="client-img">
+                                <img src="./images/shapes/masud.jpg" alt="Masud">
+                            </div>
+                            <div class="client-desig">
+                                <h6>Masud Rana</h6>
+                                <p>CEO WebWorld</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-review">
+                        <div class="review-content">
+                            <span class="quote"><i class="fa-solid fa-quote-left"></i></span>
+                            <div class="review-ratings">
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                            </div>
+                            <p class="review-msg">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and.</p>
+                        </div>
+                        <div class="client">
+                            <div class="client-img">
+                                <img src="./images/shapes/masud.jpg" alt="Masud">
+                            </div>
+                            <div class="client-desig">
+                                <h6>Masud Rana</h6>
+                                <p>CEO WebWorld</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-review">
+                        <div class="review-content">
+                            <span class="quote"><i class="fa-solid fa-quote-left"></i></span>
+                            <div class="review-ratings">
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                            </div>
+                            <p class="review-msg">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and.</p>
+                        </div>
+                        <div class="client">
+                            <div class="client-img">
+                                <img src="./images/shapes/masud.jpg" alt="Masud">
+                            </div>
+                            <div class="client-desig">
+                                <h6>Masud Rana</h6>
+                                <p>CEO WebWorld</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-review">
+                        <div class="review-content">
+                            <span class="quote"><i class="fa-solid fa-quote-left"></i></span>
+                            <div class="review-ratings">
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                                <span><i class="fa-solid fa-star"></i></span>
+                            </div>
+                            <p class="review-msg">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and.</p>
+                        </div>
+                        <div class="client">
+                            <div class="client-img">
+                                <img src="./images/shapes/masud.jpg" alt="Masud">
+                            </div>
+                            <div class="client-desig">
+                                <h6>Masud Rana</h6>
+                                <p>CEO WebWorld</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Contact us -->
+        <div class="ams-contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="contact-content pe-xxl-5">
+                            <h2>Get in <span class="color-text">Touch</span> With Us to Meet Your Business Goal.</h2>
+                            <p class="pe-5">Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="contact-form">
+                            <form>
+                                <div class="input-grp">
+                                    <label for="f-name" class="sr-only">First Name</label>
+                                    <input type="text" placeholder="First name" id="f-name">
+                                </div>
+                                <div class="input-grp">
+                                    <label for="l-name" class="sr-only">Last Name</label>
+                                    <input type="text" placeholder="Last name" id="l-name">
+                                </div>
+                                <div class="input-grp">
+                                    <label for="mail" class="sr-only">Email</label>
+                                    <input type="text" placeholder="Email address" id="mail">
+                                </div>
+                                <div class="input-grp">
+                                    <label for="msg" class="sr-only">Message</label>
+                                    <textarea id="msg" placeholder="Message"></textarea>
+                                </div>
+                                <label for="terms"><input type="checkbox" id="terms">by clicking here you agree to our <a href="#" class="color-text">terms and policy.</a></label>
+                                <button type="submit" class="ams-btn primary-btn mt-4">Send Message</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
