--- a/index.html
+++ b/index.html
@@ -96,6 +96,39 @@
             </div>
         </div>
 
+        <!-- Partners -->
+        <div class="ams-partners pt-80">
+            <div class="container">
+                <h3 class="text-center mb-40">Companies we have helped to grow</h3>
+                <div class="partner-slider owl-carousel">
+                    <div class="item">
+                        <a href="#"><img src="./images/logo/zeplin.png" alt="Zeplin"></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="./images/logo/oracle.png" alt="Oracle"></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="./images/logo/morphe.png" alt="Morphe"></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="./images/logo/samsung.png" alt="Samsung"></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="./images/logo/monday.png" alt="Monday"></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="./images/logo/segment.png" alt="Segmeny"></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="./images/logo/protonet.png" alt="Protonet"></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="./images/logo/oracle.png" alt="Oracle"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Service -->
         <div class="ams-service sec-spacer">
             <div class="container">
@@ -390,7 +423,7 @@
         </div>
 
         <!-- Contact us -->
-        <div class="ams-contact">
+        <div class="ams-contact sec-spacer-top">
             <div class="container">
                 <div class="row">
                     <div class="col-6">
