--- a/index.html
+++ b/index.html
@@ -278,6 +278,25 @@
             </div>
         </div>
 
+        <!-- Newsletter -->
+        <div class="ams-news-letter">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-6">
+                        <div class="news-letter-container">
+                            <h2 class="text-white aos-animate" data-aos="fade-up" data-aos-duration="500">Still confused about Our Services? Consult with our experts</h2>
+                            <a href="#" class="ams-btn primary-btn aos-animate" data-aos="fade-up" data-aos-duration="500">Contact Us</a>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="news-letter-image">
+                            <img src="./images/shapes/men-round.png" alt="Newsletter">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Testimonial -->
         <div class="ams-testimonial">
             <div class="sec-heading text-center mb-5">
@@ -423,7 +442,7 @@
         </div>
 
         <!-- Contact us -->
-        <div class="ams-contact sec-spacer-top">
+        <div class="ams-contact">
             <div class="container">
                 <div class="row">
                     <div class="col-6">
