--- a/index.html
+++ b/index.html
@@ -237,6 +237,47 @@
             </div>
         </div>
 
+        <!-- Service Process -->
+        <div class="ams-service-process sec-spacer-bottom">
+            <div class="container">
+                <div class="sec-heading mb-50">
+                    <div class="row">
+                        <div class="col-5">
+                            <h2>We have the best team and best process</span></h2>
+                            <p>Yet bed any for travelling assistance indulgence unpleasing. Not thoughts all exercise blessing. Indulgence way everything joy.</p>
+                            <a href="#" class="ams-btn primary-btn">See Demo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="single-process">
+                            <h1 class="process-nmbr">1</h1>
+                            <div class="icon"><span></span></div>
+                            <h6 class="mb-3">Project Discovery Call</h6>
+                            <p>Party we years to order allow asked of. We so opinion friends me message as delight. </p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="single-process">
+                            <h1 class="process-nmbr">2</h1>
+                            <div class="icon"><span></span></div>
+                            <h6 class="mb-3">Project Discovery Call</h6>
+                            <p>His defective nor convinced residence own. Connection has put impossible own apartments boisterous.</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="single-process">
+                            <h1 class="process-nmbr">3</h1>
+                            <div class="icon"><span></span></div>
+                            <h6 class="mb-3">Project Discovery Call</h6>
+                            <p>From they fine john he give of rich he. They age and draw mrs like. Improving end distrusts may instantly.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Features -->
         <div class="ams-features">
             <div class="container">
