--- a/index.html
+++ b/index.html
@@ -250,11 +250,12 @@
                     </div>
                 </div>
                 <div class="row">
+                    <!-- <img src="./images/shapes/curve-line.png" alt="Line Curve"> -->
                     <div class="col-4">
                         <div class="single-process">
                             <h1 class="process-nmbr">1</h1>
                             <div class="icon"><span></span></div>
-                            <h6 class="mb-3">Project Discovery Call</h6>
+                            <h6 class="mb-2">Project Discovery Call</h6>
                             <p>Party we years to order allow asked of. We so opinion friends me message as delight. </p>
                         </div>
                     </div>
@@ -262,7 +263,7 @@
                         <div class="single-process">
                             <h1 class="process-nmbr">2</h1>
                             <div class="icon"><span></span></div>
-                            <h6 class="mb-3">Project Discovery Call</h6>
+                            <h6 class="mb-2">Project Discovery Call</h6>
                             <p>His defective nor convinced residence own. Connection has put impossible own apartments boisterous.</p>
                         </div>
                     </div>
@@ -270,7 +271,7 @@
                         <div class="single-process">
                             <h1 class="process-nmbr">3</h1>
                             <div class="icon"><span></span></div>
-                            <h6 class="mb-3">Project Discovery Call</h6>
+                            <h6 class="mb-2">Project Discovery Call</h6>
                             <p>From they fine john he give of rich he. They age and draw mrs like. Improving end distrusts may instantly.</p>
                         </div>
                     </div>
