--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
 
         <!-- Service Process -->
-        <div class="ams-service-process sec-spacer-bottom">
+        <div class="ams-service-process">
             <div class="container">
                 <div class="sec-heading mb-50">
                     <div class="row">
@@ -249,31 +249,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <!-- <img src="./images/shapes/curve-line.png" alt="Line Curve"> -->
-                    <div class="col-4">
-                        <div class="single-process">
-                            <h1 class="process-nmbr">1</h1>
-                            <div class="icon"><span></span></div>
-                            <h6 class="mb-2">Project Discovery Call</h6>
-                            <p>Party we years to order allow asked of. We so opinion friends me message as delight. </p>
-                        </div>
+                <div class="service-process-wpr">
+                    <img src="./images/shapes/curve-line.png" alt="Line Curve">
+                    <div class="single-process">
+                        <h1 class="process-nmbr">1</h1>
+                        <div class="icon"><span></span></div>
+                        <h6 class="mb-2">Project Discovery Call</h6>
+                        <p>Party we years to order allow asked of. We so opinion friends me message as delight. </p>
                     </div>
-                    <div class="col-4">
-                        <div class="single-process">
-                            <h1 class="process-nmbr">2</h1>
-                            <div class="icon"><span></span></div>
-                            <h6 class="mb-2">Project Discovery Call</h6>
-                            <p>His defective nor convinced residence own. Connection has put impossible own apartments boisterous.</p>
-                        </div>
+                    <div class="single-process">
+                        <h1 class="process-nmbr">2</h1>
+                        <div class="icon"><span></span></div>
+                        <h6 class="mb-2">Project Discovery Call</h6>
+                        <p>His defective nor convinced residence own. Connection has put impossible own apartments boisterous.</p>
                     </div>
-                    <div class="col-4">
-                        <div class="single-process">
-                            <h1 class="process-nmbr">3</h1>
-                            <div class="icon"><span></span></div>
-                            <h6 class="mb-2">Project Discovery Call</h6>
-                            <p>From they fine john he give of rich he. They age and draw mrs like. Improving end distrusts may instantly.</p>
-                        </div>
+                    <div class="single-process">
+                        <h1 class="process-nmbr">3</h1>
+                        <div class="icon"><span></span></div>
+                        <h6 class="mb-2">Project Discovery Call</h6>
+                        <p>From they fine john he give of rich he. They age and draw mrs like. Improving end distrusts may instantly.</p>
                     </div>
                 </div>
             </div>
