--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
 
         <!-- Features -->
         <div class="ams-features">
+            <img src="./images/shapes/curve.png" alt="Curve">
             <div class="container">
                 <div class="sec-heading text-center mb-50">
                     <h2 class="aos-animate" data-aos="fade-up" data-aos-duration="500">Amar Solution Manage your <span class="color-text">business</span></h2>
