--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
         <div class="ams-banner">
             <div class="container">
                 <div class="row flex-column-reverse flex-lg-row align-items-center">
-                    <div class="col-lg-5">
-                        <div class="banner-content">
+                    <div class="col-lg-6 col-xl-5">
+                        <div class="banner-content mt-40 mt-lg-0">
                             <h1>We Help You Meet Your <span class="color-text">Business</span> Goals.</h1>
                             <p class="my-4 my-xl-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
                             <a href="#" class="ams-btn primary-btn">Buy Now</a>
                         </div>
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-lg-6 col-xl-7">
                         <div class="banner-image">
                             <img src="./images/banner/banner.png" alt="Hosting">
                         </div>
@@ -316,17 +316,17 @@
         </div>
 
         <!-- Newsletter -->
-        <div class="ams-news-letter">
+        <div class="ams-news-letter sec-spacer p-lg-0">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-6">
+                <div class="row flex-column-reverse flex-lg-row align-items-center">
+                    <div class="col-lg-6">
                         <div class="news-letter-container">
                             <h2 class="text-white aos-animate" data-aos="fade-up" data-aos-duration="500">Still confused about Our Services? Consult with our experts</h2>
                             <a href="#" class="ams-btn primary-btn aos-animate" data-aos="fade-up" data-aos-duration="500">Contact Us</a>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="news-letter-image">
+                    <div class="col-lg-6">
+                        <div class="news-letter-image mb-40 mb-lg-0">
                             <img src="./images/shapes/men-round.png" alt="Newsletter">
                         </div>
                     </div>
@@ -482,13 +482,13 @@
         <div class="ams-contact">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-6">
                         <div class="contact-content pe-xxl-5">
                             <h2>Get in <span class="color-text">Touch</span> With Us to Meet Your Business Goal.</h2>
-                            <p class="pe-5">Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.</p>
+                            <p class="pe-xl-5">Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-6 mt-40 mt-lg-0">
                         <div class="contact-form">
                             <form>
                                 <div class="input-grp">
