--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <div class="ams-header">
         <div class="header-wpr">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-2">
+                <div class="row align-items-center position-relative">
+                    <div class="col-4 col-lg-2">
                         <a href="./index.html" class="logo"><img src="./images/logo/logo.png" alt="Amarsolution"></a>
                     </div>
-                    <div class="col-8">
-                        <nav class="ams-nav-wpr">
+                    <div class="col-6 col-lg-8">
+                        <nav class="ams-nav-wpr text-end text-lg-start">
                             <ul class="ams-nav-menu">
                                 <li class="menu-item"><a href="./index.html">Home</a></li>
                                 <li class="nav-item menu-item-has-children"><a href="#">POS Software <i class="fa-solid fa-angle-down"></i></a>
@@ -62,6 +62,9 @@
                                 <li class="menu-item"><a href="./about-us.html">About</a></li>
                                 <li class="menu-item"><a href="./contact-us.html">Contact</a></li>
                             </ul>
+                            <div class="nav-toggle d-lg-none">
+                                <i class="fas fa-bars"></i>
+                            </div>
                         </nav>
                     </div>
                     <div class="col-2">
@@ -80,14 +83,14 @@
         <div class="ams-banner">
             <div class="container">
                 <div class="row flex-column-reverse flex-lg-row align-items-center">
-                    <div class="col-lg-6 col-xl-5">
+                    <div class="col-lg-6 col-xxl-5">
                         <div class="banner-content mt-40 mt-lg-0">
                             <h1>We Help You Meet Your <span class="color-text">Business</span> Goals.</h1>
-                            <p class="my-4 my-xl-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                            <p class="my-4 my-xxl-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
                             <a href="#" class="ams-btn primary-btn">Buy Now</a>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xl-7">
+                    <div class="col-lg-6 col-xxl-7">
                         <div class="banner-image">
                             <img src="./images/banner/banner.png" alt="Hosting">
                         </div>
