--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </div>
                         </nav>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 col-lg-2">
                         <div class="nav-action">
                             <a href="#" class="ams-btn primary-btn">Login</a>
                         </div>
