--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
 
         <!-- Service -->
-        <div class="ams-service sec-spacer">
+        <div class="ams-service sec-spacer position-relative">
             <div class="container">
                 <div class="sec-heading text-center mb-5">
                     <h2 class="aos-animate" data-aos="fade-up" data-aos-duration="500">Our <span class="color-text">POS</span> Software</h2>
@@ -238,10 +238,13 @@
                     </div>
                 </div>
             </div>
+            <div class="bg-shapes">
+                <img src="./images/shapes/elisps-1.png" alt="Elips" class="prs-elips">
+            </div>
         </div>
 
         <!-- Service Process -->
-        <div class="ams-service-process">
+        <div class="ams-service-process position-relative">
             <div class="container">
                 <div class="sec-heading mb-50">
                     <div class="row">
@@ -273,6 +276,9 @@
                         <p>From they fine john he give of rich he. They age and draw mrs like. Improving end distrusts may instantly.</p>
                     </div>
                 </div>
+            </div>
+            <div class="bg-shapes">
+                <img src="./images/shapes/elips-2.png" alt="Elips" class="prs-elips">
             </div>
         </div>
 
