--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <div class="sec-heading mb-40 mb-md-5">
                     <div class="row">
                         <div class="col-lg-5">
-                            <h2>We have the best team and best process</span></h2>
+                            <h2>We have the best team and best process</h2>
                             <p>Yet bed any for travelling assistance indulgence unpleasing. Not thoughts all exercise blessing. Indulgence way everything joy.</p>
                             <a href="#" class="ams-btn primary-btn">See Demo</a>
                         </div>
