--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <!-- Service Process -->
         <div class="ams-service-process position-relative">
             <div class="container">
-                <div class="sec-heading mb-40 mb-md-5">
+                <div class="sec-heading">
                     <div class="row">
                         <div class="col-lg-5">
                             <h2>We have the best team and best process</h2>
