--- a/index.html
+++ b/index.html
@@ -618,6 +618,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
     
 </body>
