--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 <div class="row flex-column-reverse flex-lg-row align-items-center">
                     <div class="col-lg-6 col-xxl-5">
                         <div class="banner-content mt-40 mt-lg-0">
-                            <h1>We Help You Meet Your <span class="color-text">Business</span> Goals.</h1>
-                            <p class="my-4 my-xxl-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
-                            <a href="#" class="ams-btn primary-btn">Buy Now</a>
+                            <h1 class="wow fadeInUp">We Help You Meet Your <span class="color-text">Business</span> Goals.</h1>
+                            <p class="my-4 my-xxl-5 wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                            <a href="#" class="ams-btn primary-btn wow fadeInUp">Buy Now</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-xxl-7">
@@ -103,7 +103,7 @@
         <div class="ams-partners pt-80">
             <div class="container">
                 <h3 class="text-center mb-40">Companies we have helped to grow</h3>
-                <div class="partner-slider owl-carousel">
+                <div class="partner-slider owl-carousel wow fadeInUp">
                     <div class="item">
                         <a href="#"><img src="./images/logo/zeplin.png" alt="Zeplin"></a>
                     </div>
@@ -136,12 +136,12 @@
         <div class="ams-service sec-spacer position-relative">
             <div class="container">
                 <div class="sec-heading text-center mb-5">
-                    <h2 class="aos-animate" data-aos="fade-up" data-aos-duration="500">Our <span class="color-text">POS</span> Software</h2>
-                    <p class="aos-animate" data-aos="fade-up" data-aos-duration="500">Don’t waste time on search manual tasks. Let Automation do it for you. Simplify workflows, reduce errors, and save time.</p>
+                    <h2 class="wow fadeInUp">Our <span class="color-text">POS</span> Software</h2>
+                    <p class="wow zoomIn">Don’t waste time on search manual tasks. Let Automation do it for you. Simplify workflows, reduce errors, and save time.</p>
                 </div>
                 <div class="row g-4 services-wpr">
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single-service aos-animate" data-aos="fade-left" data-aos-duration="500">
+                        <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/shop.svg" alt="Super Shop">
                             </div>
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single-service aos-animate" data-aos="fade-up" data-aos-duration="500">
+                        <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/cloths.svg" alt="Fashion Shop">
                             </div>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single-service aos-animate" data-aos="fade-right" data-aos-duration="500">
+                        <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/food.svg" alt="Restaurant">
                             </div>
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single-service aos-animate" data-aos="fade-left" data-aos-duration="500">
+                        <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/device.svg" alt="Device Shop">
                             </div>
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single-service aos-animate" data-aos="fade-up" data-aos-duration="500">
+                        <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/hardware.svg" alt="Hardware Shop">
                             </div>
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single-service aos-animate" data-aos="fade-right" data-aos-duration="500">
+                        <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/wholesale.svg" alt="wholesale Shop">
                             </div>
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single-service aos-animate" data-aos="fade-right" data-aos-duration="500">
+                        <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/medical.svg" alt="Medical Shop">
                             </div>
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single-service aos-animate" data-aos="fade-right" data-aos-duration="500">
+                        <div class="single-service wow fadeInUp">
                             <div class="service-image">
                                 <img src="./images/shapes/icons/tailor.svg" alt="Tailor Shop">
                             </div>
@@ -249,27 +249,27 @@
                 <div class="sec-heading">
                     <div class="row">
                         <div class="col-lg-5">
-                            <h2>We have the best team and best process</h2>
-                            <p>Yet bed any for travelling assistance indulgence unpleasing. Not thoughts all exercise blessing. Indulgence way everything joy.</p>
-                            <a href="#" class="ams-btn primary-btn">See Demo</a>
+                            <h2 class="wow fadeInUp">We have the best team and best process</h2>
+                            <p class="wow fadeInUp">Yet bed any for travelling assistance indulgence unpleasing. Not thoughts all exercise blessing. Indulgence way everything joy.</p>
+                            <a href="#" class="ams-btn primary-btn wow fadeInUp">See Demo</a>
                         </div>
                     </div>
                 </div>
                 <div class="service-process-wpr">
                     <img src="./images/shapes/curve-line.png" alt="Line Curve">
-                    <div class="single-process">
+                    <div class="single-process wow fadeInLeft">
                         <h1 class="process-nmbr">1</h1>
                         <div class="icon"><span></span></div>
                         <h6 class="mb-2">Project Discovery Call</h6>
                         <p>Party we years to order allow asked of. We so opinion friends me message as delight. </p>
                     </div>
-                    <div class="single-process">
+                    <div class="single-process wow fadeInUp">
                         <h1 class="process-nmbr">2</h1>
                         <div class="icon"><span></span></div>
                         <h6 class="mb-2">Project Discovery Call</h6>
                         <p>His defective nor convinced residence own. Connection has put impossible own apartments boisterous.</p>
                     </div>
-                    <div class="single-process">
+                    <div class="single-process wow fadeInRight">
                         <h1 class="process-nmbr">3</h1>
                         <div class="icon"><span></span></div>
                         <h6 class="mb-2">Project Discovery Call</h6>
@@ -287,30 +287,30 @@
             <img src="./images/shapes/curve.png" alt="Curve">
             <div class="container">
                 <div class="sec-heading text-center mb-50">
-                    <h2 class="aos-animate" data-aos="fade-up" data-aos-duration="500">Amar Solution Manage your <span class="color-text">business</span></h2>
-                    <p class="aos-animate" data-aos="fade-up" data-aos-duration="500">We make it easy for users to use our platform, that's why we provide this benefit.</p>
+                    <h2 class="wow fadeInUp">Amar Solution Manage your <span class="color-text">business</span></h2>
+                    <p class="wow zoomIn">We make it easy for users to use our platform, that's why we provide this benefit.</p>
                 </div>
                 <div class="row">
                     <div class="features-wpr">
-                        <div class="single-feature">
+                        <div class="single-feature wow fadeInUp">
                             <img src="./images/shapes/icons/cloud.svg" alt="Sales">
                             <h5 class="mt-4">Sales</h5>
                             <p>It doesn't cost a fortune to move your work online —in fact, it's free! Starting from 5 GB of free storage problems.</p>
                             <a href="#" class="read-more">Learn More</a>
                         </div>
-                        <div class="single-feature">
+                        <div class="single-feature wow fadeInUp">
                             <img src="./images/shapes/icons/stock.svg" alt="Stock">
                             <h5 class="mt-4">Stock</h5>
                             <p>It doesn't cost a fortune to move your work online —in fact, it's free! Starting from 5 GB of free storage problems.</p>
                             <a href="#" class="read-more">Learn More</a>
                         </div>
-                        <div class="single-feature">
+                        <div class="single-feature wow fadeInUp">
                             <img src="./images/shapes/icons/account.svg" alt="Account">
                             <h5 class="mt-4">Account</h5>
                             <p>It doesn't cost a fortune to move your work online —in fact, it's free! Starting from 5 GB of free storage problems.</p>
                             <a href="#" class="read-more">Learn More</a>
                         </div>
-                        <div class="single-feature">
+                        <div class="single-feature wow fadeInUp">
                             <img src="./images/shapes/icons/report.svg" alt="Report">
                             <h5 class="mt-4">Report</h5>
                             <p>It doesn't cost a fortune to move your work online —in fact, it's free! Starting from 5 GB of free storage problems.</p>
@@ -318,7 +318,7 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <a href="#" class="ams-btn primary-btn mt-40">More About  Feature</a>
+                        <a href="#" class="ams-btn primary-btn mt-40 wow zoomIn">More About  Feature</a>
                     </div>
                 </div>
             </div>
@@ -329,13 +329,13 @@
             <div class="container">
                 <div class="row flex-column-reverse flex-lg-row align-items-center">
                     <div class="col-lg-6">
-                        <div class="news-letter-container">
+                        <div class="news-letter-container wow fadeInLeft">
                             <h2 class="text-white aos-animate" data-aos="fade-up" data-aos-duration="500">Still confused about Our Services? Consult with our experts</h2>
                             <a href="#" class="ams-btn primary-btn aos-animate" data-aos="fade-up" data-aos-duration="500">Contact Us</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="news-letter-image mb-40 mb-lg-0">
+                        <div class="news-letter-image mb-40 mb-lg-0 wow fadeInRight">
                             <img src="./images/shapes/men-round.png" alt="Newsletter">
                         </div>
                     </div>
@@ -346,10 +346,10 @@
         <!-- Testimonial -->
         <div class="ams-testimonial">
             <div class="sec-heading text-center mb-5">
-                <h6 class="color-text aos-animate" data-aos="fade-up" data-aos-duration="500">Testimonial</h6>
-                <h2 class="aos-animate" data-aos="fade-up" data-aos-duration="500">What Our Happy<br/> <span class="color-text">Clients</span> Say</h2>
+                <h6 class="color-text wow fadeInUp">Testimonial</h6>
+                <h2 class="wow fadeInUp">What Our Happy<br/> <span class="color-text">Clients</span> Say</h2>
             </div>
-            <div class="container-fluid container-right">
+            <div class="container-fluid container-right wow fadeInLeft">
                 <div class="client-reviews owl-carousel position-static">
                     <div class="single-review">
                         <div class="review-content">
@@ -493,12 +493,12 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="contact-content pe-xxl-5">
-                            <h2>Get in <span class="color-text">Touch</span> With Us to Meet Your Business Goal.</h2>
-                            <p class="pe-xl-5">Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.</p>
+                            <h2 class="wow fadeInUp">Get in <span class="color-text">Touch</span> With Us to Meet Your Business Goal.</h2>
+                            <p class="pe-xl-5 wow fadeInUp">Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.Get in touch with us for any kind of help. We are here to give you the best Pricing and also here to help you to find your Domain.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 mt-40 mt-lg-0">
-                        <div class="contact-form">
+                        <div class="contact-form wow fadeInRight">
                             <form>
                                 <div class="input-grp">
                                     <label for="f-name" class="sr-only">First Name</label>
@@ -533,7 +533,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-sm-9 mb-4 mb-lg-0">
-                        <div class="footer-widget footer-about">
+                        <div class="footer-widget footer-about wow fadeInLeft">
                             <a href="#"><img src="./images/logo/footer-logo.png" alt="Amarsolution"></a>
                             <p class="mt-4">Finance helps companies manage payments easily.</p>
                             <div class="footer-social-links mt-3">
@@ -548,7 +548,7 @@
                     <div class="col-lg-9">
                         <div class="footer-widget footer-menu">
                             <div class="row">
-                                <div class="col-lg-3 col-5">
+                                <div class="col-lg-3 col-5 wow fadeInUp">
                                     <h5 class="mb-4 text-white">Hosting</h5>
                                     <ul class="menu-list">
                                         <li><a href="#">Features</a></li>
@@ -558,7 +558,7 @@
                                         <li><a href="#">Updates</a></li>
                                     </ul>
                                 </div>
-                                <div class="col-lg-2 col-7">
+                                <div class="col-lg-2 col-7 wow fadeInUp">
                                     <h5 class="mb-4 text-white">About</h5>
                                     <ul class="menu-list">
                                         <li><a href="#">About</a></li>
@@ -568,7 +568,7 @@
                                         <li><a href="#">Blog</a></li>
                                     </ul>
                                 </div>
-                                <div class="col-lg-3 col-5 mt-4 mt-lg-0">
+                                <div class="col-lg-3 col-5 mt-4 mt-lg-0 wow fadeInUp">
                                     <h5 class="mb-4 text-white">Support</h5>
                                     <ul class="menu-list">
                                         <li><a href="#">Getting Started</a></li>
@@ -578,7 +578,7 @@
                                         <li><a href="#">Chat support</a></li>
                                     </ul>
                                 </div>
-                                <div class="col-lg-4 col-7 mt-4 mt-lg-0">
+                                <div class="col-lg-4 col-7 mt-4 mt-lg-0 wow fadeInRight">
                                     <div class="footer-widget footer-contact">
                                         <h5 class="mb-4 text-white">Contacts us</h5>
                                         <ul class="contact-list">
@@ -597,11 +597,11 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 wow fadeInUp">
                         <p>Copyright &copy; 2022 <a href="#">Amar Solution.</a></p>
                     </div>
                     <div class="col-lg-7 mt-3 mt-lg-0">
-                        <div class="footer-links text-lg-end">
+                        <div class="footer-links text-lg-end wow fadeInUp">
                             <a href="#">All Rights Reserved</a>
                             <a href="#">Terms and Conditions</a>
                             <a href="#" class="border-end-0">Privacy Policy</a>
