--- a/resturant.html
+++ b/resturant.html
@@ -313,7 +313,7 @@
         </div>
 
         <!-- Contact us -->
-        <div class="ams-contact">
+        <div class="ams-contact mb-0">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
