--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                                         <li><a href="#">Resturant Pos</a></li>
                                     </ul>
                                 </li>
+                                <li class="menu-item"><a href="./blogs.html">Blogs</a></li>
                                 <li class="menu-item"><a href="./about-us.html">About</a></li>
                                 <li class="menu-item"><a href="./contact-us.html">Contact</a></li>
                             </ul>
